--- a/css/project-page.css
+++ b/css/project-page.css
@@ -104,8 +104,9 @@
   background: linear-gradient(45deg, #1d7d90, #5dd5c3);
 }
 
-.project-page {
+.project-page > div {
   overflow-x: hidden;
+  position: relative;
 }
 
 .project-page .project__summary {
